--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "https://bitbucket.org/yournode/yn-helloworld.git"
+    "url": "https://github.com/thoso/yn-helloworld.git"
   },
   "author": "YourNode",
   "dependencies": {
